--- a/blog/ejemplo-comercio-exterior.qmd
+++ b/blog/ejemplo-comercio-exterior.qmd
@@ -1,14 +1,30 @@
 ---
-titulo: "La evolución del comercio exterior español en 2024"
-subtitulo: "Análisis de las principales tendencias y retos del sector exportador"
-fecha: "2025-01-18"
+title: "La evolución del comercio exterior español en 2024"
+subtitle: "Análisis de las principales tendencias y retos del sector exportador"
+author: "Víctor Gutiérrez Marcos"
+date: "2025-01-18"
+date-formatted: "Enero 2025"
+slug: "ejemplo-comercio-exterior"
+numero: ""
 categoria: "Comercio Internacional"
-descripcion: "Un análisis detallado de la evolución del comercio exterior español durante 2024, examinando las principales tendencias, sectores clave y desafíos para el futuro."
+bio: "Técnico Comercial y Economista del Estado en el Ministerio de Economía, Comercio y Empresa de España."
+year: 2025
+
+# Metadatos para el índice del blog
+description: "Un análisis detallado de la evolución del comercio exterior español durante 2024, examinando las principales tendencias, sectores clave y desafíos para el futuro."
 tags:
   - comercio exterior
   - exportaciones
   - economía española
   - política comercial
+
+# Formato de salida
+format:
+  html:
+    template: _templates/articulo.html
+    css: articulo-styles.css
+  pdf:
+    template: _templates/articulo.tex
 ---
 
 El año 2024 ha supuesto un punto de inflexión para el comercio exterior español, marcado por la consolidación de nuevas rutas comerciales y la adaptación del tejido empresarial a un contexto internacional cada vez más complejo.
