--- a/blog/_templates/articulo.tex
+++ b/blog/_templates/articulo.tex
@@ -8,7 +8,7 @@
 \usepackage[scaled=0.95]{helvet}  % Helvetica para sans-serif
 
 % Idioma
-\usepackage[$if(lang)$$lang$$else$spanish$endif$]{babel}
+\usepackage[spanish]{babel}
 
 % Geometría de página
 \usepackage[$for(geometry)$$geometry$$sep$,$endfor$]{geometry}
