Update blog templates and styles for 2026
Updated article template metadata to 2026, improved HTML and LaTeX templates for cleaner structure and copyright, and enhanced CSS for better layout and mobile responsiveness. Added a default Quarto YAML configuration file. Removed the example article HTML file.

--- a/blog/_templates/articulo.tex
+++ b/blog/_templates/articulo.tex
@@ -61,7 +61,7 @@
     {\normalfont\fontsize{11}{13}\bfseries\sffamily\color{primario}\MakeUppercase}
     {\thesection}{1em}{}
 \titleformat{\subsection}
-    {\normalfont\fontsize{10}{12}\bfseries\sffamily\color{texto}}
+    {\normalfont\fontsize{10}{12}\bfseries\sffamily\color{primario}}
     {\thesubsection}{1em}{}
 \titleformat{\subsubsection}
     {\normalfont\fontsize{10}{12}\itshape\color{texto}}
@@ -108,7 +108,7 @@ $endif$
 
 % === CABECERA ===
 \begin{center}
-{\Large\bfseries\sffamily\color{primario} VÍCTOR GUTIÉRREZ MARCOS}\\[0.3em]
+{\Large\bfseries\sffamily\color{primario} \href{https://www.victorgutierrezmarcos.es}{VÍCTOR GUTIÉRREZ MARCOS}}\\[0.3em]
 {\small\sffamily\color{textomuted} Análisis Económico y Comercial}
 \end{center}
 
@@ -148,13 +148,7 @@ $body$
 % === PIE ===
 \vspace{0.5cm}
 \begin{center}
-{\small\bfseries\sffamily\color{primario} \textcopyright{} $if(year)$$year$$else$2025$endif$ Víctor Gutiérrez Marcos}
+{\small\bfseries\sffamily\color{primario} \textcopyright{} $if(year)$$year$$else$2026$endif$ Víctor Gutiérrez Marcos}
 \end{center}
-
-{\footnotesize\color{textomuted}
-Las opiniones expresadas en este artículo son exclusivamente del autor y no representan necesariamente las posiciones oficiales de ninguna institución.
-
-Este contenido se comparte con fines educativos e informativos.
-}
 
 \end{document}
