Move _templates to templates and update references
Renamed the 'blog/_templates' directory to 'blog/templates' and updated all file references in .qmd, .html, and .bat files to use the new path. This improves consistency and organization of template resources.

--- a/blog/20260121_prueba.qmd
+++ b/blog/20260121_prueba.qmd
@@ -21,15 +21,15 @@ tags:
 # Formato de salida
 format:
   html:
-    template: _templates/articulo.html
-    css: _templates/articulo-styles.css
+    template: templates/articulo.html
+    css: templates/articulo-styles.css
     self-contained: true
     embed-resources: true
     toc: false
     theme: none
     highlight-style: tango
   pdf:
-    template: _templates/articulo.tex
+    template: templates/articulo.tex
     documentclass: article
     papersize: a4
     geometry:
