--- a/blog/_plantilla.qmd
+++ b/blog/_plantilla.qmd
@@ -27,15 +27,15 @@ tags:
 # No modificar (configuración de formato)
 format:
   html:
-    template: _templates/articulo.html
-    css: _templates/articulo-styles.css
+    template: templates/articulo.html
+    css: templates/articulo-styles.css
     self-contained: true
     embed-resources: true
     toc: false
     theme: none
     highlight-style: tango
   pdf:
-    template: _templates/articulo.tex
+    template: templates/articulo.tex
     documentclass: article
     papersize: a4
     geometry:
