Add social sharing and exam exit protection features
Added social sharing buttons with styles and JavaScript handlers to blog articles. Improved the test simulator by implementing protection against accidental page exit during exams, warning users before leaving or refreshing. Also updated index.html to emphasize home card descriptions with <em> tags.

--- a/blog/_plantilla.qmd
+++ b/blog/_plantilla.qmd
@@ -24,6 +24,13 @@ year: 2026
 tags:
   - etiqueta1
 
+# Imagen destacada para el índice del blog (opcional)
+# La imagen se mostrará en la tarjeta del artículo en blog/index.html
+# Guardar imágenes en blog/images/
+image: ""
+image-alt: ""
+image-caption: ""
+
 # No modificar (configuración de formato)
 format:
   html:
