--- a/blog/templates/articulo.tex
+++ b/blog/templates/articulo.tex
@@ -55,17 +55,17 @@
 \renewcommand{\headrulewidth}{0pt}
 \fancyfoot[C]{\color{textomuted}\small\thepage}
 
-% Títulos de sección
+% Títulos de sección (sin numeración por defecto)
 \usepackage{titlesec}
 \titleformat{\section}
     {\normalfont\fontsize{11}{13}\bfseries\sffamily\color{primario}\MakeUppercase}
-    {\thesection}{1em}{}
+    {}{0em}{}
 \titleformat{\subsection}
     {\normalfont\fontsize{10}{12}\bfseries\sffamily\color{primario}}
-    {\thesubsection}{1em}{}
+    {}{0em}{}
 \titleformat{\subsubsection}
     {\normalfont\fontsize{10}{12}\itshape\color{texto}}
-    {\thesubsubsection}{1em}{}
+    {}{0em}{}
 
 \titlespacing*{\section}{0pt}{2.5ex plus 1ex minus .2ex}{1.5ex plus .2ex}
 \titlespacing*{\subsection}{0pt}{2ex plus 1ex minus .2ex}{1ex plus .2ex}
@@ -94,14 +94,21 @@
 \providecommand{\tightlist}{%
   \setlength{\itemsep}{0pt}\setlength{\parskip}{0pt}}
 
-% Imágenes inline
+% Comando para imágenes (Pandoc 3.x)
+\providecommand{\pandocbounded}[1]{#1}
+
+% Imágenes - centradas al 80% del ancho
 $if(graphics)$
 \usepackage{graphicx}
 \makeatletter
-\def\maxwidth{\ifdim\Gin@nat@width>\linewidth\linewidth\else\Gin@nat@width\fi}
+\def\maxwidth{0.8\linewidth}
 \def\maxheight{\ifdim\Gin@nat@height>\textheight\textheight\else\Gin@nat@height\fi}
 \makeatother
 \setkeys{Gin}{width=\maxwidth,height=\maxheight,keepaspectratio}
+% Centrar figuras
+\makeatletter
+\g@addto@macro\@floatboxreset{\centering}
+\makeatother
 $endif$
 
 \begin{document}
