Rename bienvenida post and remove old exports
Renamed '20260128_post_bienvenida.qmd' to '20260128_articulo_de_bienvenida.qmd' and updated metadata fields. Deleted obsolete HTML and PDF exports for the old filename.

--- a/blog/20260128_articulo_de_bienvenida.qmd
+++ b/blog/20260128_articulo_de_bienvenida.qmd
@@ -6,9 +6,9 @@ date: 2026-01-28
 date-formatted: "28 de enero de 2026"
 author: "Víctor Gutiérrez Marcos"
 lang: es
-slug: "20260128_post_bienvenida"
+slug: "20260128_articulo_de_bienvenida"
 categoria: "General"
-tipo: "Artículo de Bienvenida"
+tipo: "ARTÍCULO DE BIENVENIDA"
 
 # Formato
 format:
