Add welcome article and update blog index and RSS
Added the new welcome article in HTML and PDF formats, updated the Quarto markdown source with image metadata, included the article in the blog index with preview and download links, and updated the RSS feed to announce the new post.

--- a/blog/20260128_articulo_de_bienvenida.qmd
+++ b/blog/20260128_articulo_de_bienvenida.qmd
@@ -9,6 +9,8 @@ lang: es
 slug: "20260128_articulo_de_bienvenida"
 categoria: "General"
 tipo: "ARTÍCULO DE BIENVENIDA"
+image: "images/20260128_welcome_post.png"
+image-alt: "Bienvenido al blog"
 
 # Formato
 format:
